# rust-cli-template

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile-lint-test  README.md  docker-compose.lint-test.yml
config/: app.toml  log.toml
src/: main.rs  util.rs
