[package]
name = "rust-cli-template"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
failure = "=0.1.1"
fs2 = "=0.4.3"
log = "=0.4.1"
log4rs = { version = "=0.8.0", features = ["toml_format"] }
serde = "=1.0.36"
serde_derive = "=1.0.36"
simple_logger = "=0.5.0"
structopt = "=0.2.5"
structopt-derive = "=0.2.5"
toml = "=0.4.5"
