[package]
name = "rust-cli-template"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
failure = "0.1.2"
fs2 = "0.4.3"
log = "0.4.4"
log4rs = { version = "0.8.0", features = ["toml_format"] }
serde = "1.0.75"
serde_derive = "1.0.75"
simple_logger = "0.5.0"
structopt = "0.2.10"
structopt-derive = "0.2.10"
toml = "0.4.6"

[[bin]]
name = "rust-cli-template"
path = "src/main.rs"
